--- a/FodboldApp/FodboldApp/FodboldApp/App.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/App.xaml
@@ -2,7 +2,8 @@
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.App"             
-             xmlns:controls="clr-namespace:Plugin.CrossPlatformTintedImage.Abstractions;assembly=Plugin.CrossPlatformTintedImage.Abstractions">
+             xmlns:controls="clr-namespace:Plugin.CrossPlatformTintedImage.Abstractions;assembly=Plugin.CrossPlatformTintedImage.Abstractions"
+             xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel">
     <!--BindingContext="FodboldApp.ViewModel:HeaderViewModel"-->
 
     <Application.Resources>
@@ -89,6 +90,9 @@
                     <!-- End Content -->
 
                     <Grid ColumnSpacing="0" RowSpacing="0" Grid.Column="0" Grid.Row="2">
+                        <Grid.BindingContext>
+                            <viewmodels:HeaderVM/>
+                        </Grid.BindingContext>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="2"/>
