--- a/FodboldApp/FodboldApp/FodboldApp/View/HistoricalStandings.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/HistoricalStandings.xaml
@@ -3,8 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.View.HistoricalStandings"
              xmlns:local="clr-namespace:FodboldApp.View.Interface" 
-             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
 
     <ContentPage.Resources>
         <ResourceDictionary>
