--- a/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Matches.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:ImageCircle.Forms.Plugin.Abstractions;assembly=ImageCircle.Forms.Plugin.Abstractions"
-             x:Class="FodboldApp.Matches"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             x:Class="FodboldApp.Matches">
     <ContentPage.Content>
         <StackLayout Padding="0, 0, 0, 0"
                      Margin="0, 0, 0, 0"
