--- a/FodboldApp/FodboldApp/FodboldApp/View/OverHundredGames.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/OverHundredGames.xaml
@@ -2,8 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.View.OverHundredGames"
-             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
 
     <ContentPage.Content>
         <StackLayout Spacing="0">
