--- a/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.View.PlayerDescription"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             x:Class="FodboldApp.View.PlayerDescription">
     <ContentPage.Content>
         <StackLayout Padding="0, 0, 0, 0"
                          Margin="0, 0, 0, 0"
