--- a/FodboldApp/FodboldApp/FodboldApp/View/Tournament.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Tournament.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FodboldApp.Tournament"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             x:Class="FodboldApp.Tournament">
     <ContentPage.Content>
         <StackLayout x:Name="pageLayout">
             <Label Text="RESULTATER"
