--- a/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
@@ -2,9 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.View.FormerPlayers"
+             xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
     <ContentPage.Content>
         <StackLayout x:Name="pageLayout">
+            <StackLayout.BindingContext>
+                <viewmodels:FormerPlayersVM/>
+            </StackLayout.BindingContext>
             <Label Text="TIDLIGERE SPILLERE"
                    HorizontalOptions="FillAndExpand"
                    HorizontalTextAlignment="Center"
