--- a/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/History.xaml
@@ -1,10 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              x:Class="FodboldApp.View.History">
     <ContentPage.Content>
 
         <StackLayout>
+            <StackLayout.BindingContext>
+                <viewmodels:HistoryVM/>
+            </StackLayout.BindingContext>
             <Label Text="HISTORIK" TextColor="#243F73" FontSize="Large" VerticalOptions="Center" 
            HorizontalOptions="Center"/>
 
