--- a/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/PlayerDescription.xaml
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              x:Class="FodboldApp.View.PlayerDescription">
     <ContentPage.Content>
         <StackLayout Padding="0, 0, 0, 0"
                          Margin="0, 0, 0, 0"
                          Spacing="0"
                          HorizontalOptions="FillAndExpand">
+            <!--<StackLayout.BindingContext>
+                <viewmodels:/>
+            </StackLayout.BindingContext>-->
             <Label Text="{Binding Name}"
                        TextColor="{StaticResource textColor}"
                        FontSize="32"
