Color for historylists follow the wireframes Some MVVM work on News and NEWsPage

--- a/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FormerPlayers.xaml
@@ -2,8 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FodboldApp.View.FormerPlayers"
+             xmlns:local="clr-namespace:FodboldApp.View.Interface"
              xmlns:viewmodels="clr-namespace:FodboldApp.ViewModel"
              xmlns:flv="clr-namespace:DLToolkit.Forms.Controls;assembly=DLToolkit.Forms.Controls.FlowListView">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:ListColorConverter x:Key="colorConvert"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
+
     <ContentPage.Content>
         <StackLayout x:Name="pageLayout">
             <StackLayout.BindingContext>
@@ -18,12 +26,12 @@
                    TextColor="{StaticResource textColor}"
                    BackgroundColor="#f0f0f0"/>
 
-            <flv:FlowListView x:Name="flowListView" FlowItemTappedCommand="{Binding PlayerDescriptionCommand}" FlowColumnCount="1" SeparatorVisibility="Default" HasUnevenRows="True" SeparatorColor="Black"
+            <flv:FlowListView x:Name="flowListView" FlowItemTappedCommand="{Binding PlayerDescriptionCommand}" FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True"
 			   FlowItemsSource="{Binding PlayersList}">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
                         <Grid ColumnSpacing="0">
-                            <Label Text="{Binding Player}" HeightRequest="50" FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="White"/>
+                            <Label Text="{Binding Player}" HeightRequest="50" FontSize="Medium" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="{Binding Index, Converter={StaticResource colorConvert}}"/>
                         </Grid>
                     </DataTemplate>
                 </flv:FlowListView.FlowColumnTemplate>
